--- a/index.html
+++ b/index.html
@@ -69,8 +69,8 @@
                 <div class="btn-gr1">
                     <button value="UP" onclick="onMoveFocus(value)" class="fa fa-arrow-up"></button>
                     <button value="DOWN" onclick="onMoveFocus(value)" class="fa fa-arrow-down"></button>
-                    <button onclick="onCenterText()" class="fa fa-exchange"></button>
-                    <button onclick="onAddText()" class="fa fa-plus"></button>
+                    <button onclick="onSwitchLines()" class="fa fa-exchange"></button>
+                    <button onclick="onAddNewLine()" class="fa fa-plus"></button>
                     <button onclick="onRemoveText()" class="fa fa-trash"></button>
                 </div>
                 <div class="btn-gr2">
@@ -79,8 +79,8 @@
                     <button value="CENTER" onclick="onAlignText(value)" class="fa fa-align-center"></button>
                     <button value="LEFT" onclick="onAlignText(value)" class="fa fa-align-left"></button>
                     <button value="RIGHT" onclick="onAlignText(value)" class="fa fa-align-right"></button>
-                    <select id="fonts" class="fonts-selection" onkeyup="onChangeFont(value)">
-                        <option value="">Ariel</option>
+                    <select id="fonts" class="fonts-selection" onchange="onChangeFont(value)">
+                        <option value="">Impact</option>
                         <option value="">Saab</option>
                         <option value="">Opel</option>
                         <option value="">Audi</option>
