adding color options

--- a/contact.html
+++ b/contact.html
@@ -58,6 +58,7 @@
 
     <script src="js/utilitis.js"></script>
     <script src="js/services.js"></script>
+    <script src="js/galleryController.js"></script>
     <script src="js/controler.js"></script>
 </body>
 
