--- a/index.html
+++ b/index.html
@@ -74,8 +74,8 @@
                     <button onclick="onRemoveText()" class="fa fa-trash"></button>
                 </div>
                 <div class="btn-gr2">
-                    <button value="PLUS" onclick="onChangeTextSize(value)" class="fa fa-font"><span>+</span></button>
-                    <button value="MINUS" onclick="onChangeTextSize(value)" class="fa fa-font"><span>-</span></button>
+                    <button value="PLUS" onclick="onChangeTextSize(1)" class="fa fa-font"><span>+</span></button>
+                    <button value="MINUS" onclick="onChangeTextSize(-1)" class="fa fa-font"><span>-</span></button>
                     <button value="CENTER" onclick="onAlignText(value)" class="fa fa-align-center"></button>
                     <button value="LEFT" onclick="onAlignText(value)" class="fa fa-align-left"></button>
                     <button value="RIGHT" onclick="onAlignText(value)" class="fa fa-align-right"></button>
@@ -86,15 +86,13 @@
                         <option value="">Audi</option>
                     </select>
                     <button class="fa fa-strikethrough">
-                        <input class="control-color-input" type="color" oninput="onChangeStokeColor(value)"
+                        <input class="control-color-input" type="color" value ="#ff0000"oninput="onChangeStrokeColor(value)"
                             title="Choose Outline color">
                         <span></span></button>
                         
                     <button class="fa palette"><input class="control-color-input" type="color"
-                        oninput="onChangeTextColor(value)" title="Choose color"
-                        data-trans="fill-color" /><span>🎨</span></button>
-                    </button>
-                    
+                            oninput="onChangeTextColor(value)" title="Choose color"
+                            data-trans="fill-color" /><span>🎨</span></button>       
                 </div>
                 <div class="stikers-container">
 
@@ -120,6 +118,7 @@
 
     <script src="js/utilitis.js"></script>
     <script src="js/services.js"></script>
+    <script src="js/galleryController.js"></script>
     <script src="js/controler.js"></script>
 
 
