--- a/memes.html
+++ b/memes.html
@@ -37,6 +37,7 @@
 
     <script src="js/utilitis.js"></script>
     <script src="js/services.js"></script>
+    <script src="js/galleryController.js"></script>
     <script src="js/controler.js"></script>
 </body>
 
