adding a meme filter

--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
                         <span></span></button>
                         
                     <button class="fa palette"><input class="control-color-input" type="color"
-                            oninput="onChangeTextColor(value)" title="Choose color"
+                            onchange="onChangeTextColor(value)" title="Choose color"
                             data-trans="fill-color" /><span>🎨</span></button>       
                 </div>
                 <div class="stikers-container">
