editing a filter option

--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
                             title="Choose Outline color">
                         <span></span></button>
                         
-                    <button class="fa palette"><input class="control-color-input" type="color"
+                    <button class="fa palette"><input class="control-color-input" type="color" id="get"
                             onchange="onChangeTextColor(value)" title="Choose color"
                             data-trans="fill-color" /><span>🎨</span></button>       
                 </div>
