adding raw features and also sharing image feature

--- a/about.html
+++ b/about.html
@@ -7,10 +7,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="css/main.css">
-    <title>Your Saved Memes</title>
+    <title>About The Developer</title>
 </head>
 
 <body>
+
     <header class="navbar flex space-between">
         <div class="logo">
             <h1 class="heading">MemeGenerator</h1>
@@ -31,6 +32,31 @@
             <button class="btn-menu fa fa-bars" onclick="toggleMenu()"></button>
         </nav>
     </header>
+   
+    <section class="by-socials">
+        <ul>
+            <li> <a href="https://www.facebook.com/profile.php?id=100010372724389" target="_blank">
+                    <i class="fa fa-facebook"></i>
+                </a>
+            </li>
+            <li>
+                <a href="https://www.linkedin.com/in/olga-krasilnikov-68b66322b/" target="_blank">
+                    <i class="fa fa-linkedin"></i>
+                </a>
+            </li>
+            <li>
+                <a href="https://github.com/OliaKr" target="_blank">
+                    <i class="fa fa-github"></i>
+                </a>
+            </li>
+            <li>
+                <a href="https://github.com/OliaKr" target="_blank">
+                    <i class="fa fa-instagram"></i>
+                </a>
+            </li>
+        </ul>
+
+    </section>
 
 
 
@@ -40,6 +66,7 @@
     <script src="js/services.js"></script>
     <script src="js/galleryController.js"></script>
     <script src="js/controler.js"></script>
+
 </body>
 
 </html>
