--- a/index.html
+++ b/index.html
@@ -14,13 +14,13 @@
     <header class="navbar flex space-between">
         <div class="logo">
             <h1 class="heading">Memegenerator</h1>
-            <h4 class="sub-heading">Your memes</h4>
+            <h4 class="sub-heading">Your Memes</h4>
         </div>
         <nav class="navbar topnav flex">
             <ul class="main-nav flex clean-list flex space-between align-center">
-                <li><a href="index.html">Galery</a></li>
+                <li><a href="index.html">Gallery</a></li>
                 <li><a href="memes.html">Memes</a></li>
-                <li><a href="contact.html">Contact</a></li>
+                <li><a href="about.html">About</a></li>
                 <li class="dropdown">Language<span class="fa fa-angle-double-down"></span>
                     <ul class="dropbtn dropdown-content clean-list ">
                         <li><a onclick="onSetLang('EN')">English</a></li>
@@ -39,11 +39,11 @@
                 onkeyup="onFilterMemes(value)">
             <span class="fa fa-search"></span>
             <datalist id="theme-search">
-                <option value="Funny">
-                <option value="Animal">
-                <option value="Bad">
-                <option value="Awkward">
-                <option value="Happy">
+                <option value="funny">
+                <option value="animal">
+                <option value="bad">
+                <option value="awkward">
+                <option value="happy">
             </datalist>
         </div>
         <div class="search-words">
@@ -57,7 +57,6 @@
     </section> -->
 
 
-
     <section class="editor-container main-layout">
         <div class="canvas-container hidden">
             <canvas id="meme-canvas" height="450" width="450">
@@ -66,42 +65,44 @@
         <div class="canvas-editors hidden">
             <div class="editors main-layout">
                 <input class="userTxt" type="text" id="text" placeholder="Create something!" oninput="onsendInput(this)">
+                <button class="fa fa-upload" onclick="onDisplayInputFile()">
+                    <input type="file" class="file-input btn" name="image" onchange="onImgInput(event)" />
+                </button>
                 <div class="btn-gr1">
                     <button value="UP" onclick="onMoveFocus(value)" class="fa fa-arrow-up"></button>
                     <button value="DOWN" onclick="onMoveFocus(value)" class="fa fa-arrow-down"></button>
                     <button onclick="onSwitchLines()" class="fa fa-exchange"></button>
-                    <button onclick="onAddNewLine()" class="fa fa-plus"></button>
+                    <button onclick="onAddLine()" class="fa fa-plus"></button>
                     <button onclick="onRemoveText()" class="fa fa-trash"></button>
                 </div>
                 <div class="btn-gr2">
                     <button value="PLUS" onclick="onChangeTextSize(1)" class="fa fa-font"><span>+</span></button>
                     <button value="MINUS" onclick="onChangeTextSize(-1)" class="fa fa-font"><span>-</span></button>
-                    <button value="CENTER" onclick="onAlignText(value)" class="fa fa-align-center"></button>
-                    <button value="LEFT" onclick="onAlignText(value)" class="fa fa-align-left"></button>
-                    <button value="RIGHT" onclick="onAlignText(value)" class="fa fa-align-right"></button>
+                    <button onclick="onAlignText('right')" class="fa fa-align-left "></button>
+                    <button onclick="onAlignText('center')" class="fa fa-align-center "></button>
+                    <button onclick="onAlignText('left')" class="fa  fa-align-right"></button>
                     <select id="fonts" class="fonts-selection" onchange="onChangeFont(value)">
-                        <option value="">Impact</option>
-                        <option value="">Saab</option>
-                        <option value="">Opel</option>
-                        <option value="">Audi</option>
+                        <option>Impact</option>
+                        <option>Times New Roman</option>
+                        <option>Verdana</option>
                     </select>
                     <button class="fa fa-strikethrough">
-                        <input class="control-color-input" type="color" value ="#ff0000"oninput="onChangeStrokeColor(value)"
+                        <input class="control-color-input" type="color" oninput="onChangeStokeColor(value)"
                             title="Choose Outline color">
                         <span></span></button>
-                        
-                    <button class="fa palette"><input class="control-color-input" type="color" id="get"
-                            onchange="onChangeTextColor(value)" title="Choose color"
-                            data-trans="fill-color" /><span>🎨</span></button>       
+                    <button class="fa palette"><input class="control-color-input" type="color"
+                            oninput="onChangeTextColor(value)" title="Choose color"
+                            data-trans="fill-color" /><span>🎨</span></button>
                 </div>
                 <div class="stikers-container">
 
                 </div>
                 <div class="save-btns">
-                    <button class="fc-btn">Share to<sapn class="fa fa-facebook"></sapn></button>
-                    <button class="dw-btn">Download to your computer<span class="fa fa-download"></span></button>
-                    <a href="#" class="btn" onclick="downloadImg(this)" download="my-img.jpg">Download as jpeg</a>
-                    <button class="save-btn">Save<span class="fa fa-save"></span> </button>
+                    <button onclick="shareToExternalSorce()" class="fc-btn share-container "><span
+                            class="fa fa-facebook"></span></button>
+                    <a href="#" class="a-btn" onclick="downloadImg(this)" download="my-img.jpg"><span
+                            class="fa fa-download"></span></a><span></span>
+                    <button class="save-btn"><span class="fa fa-save"></span></button>
                 </div>
             </div>
         </div>
@@ -111,15 +112,16 @@
 
     <footer class="footer">
         <h4 class="logo">MemeGenerator</h4>
-        <p>Presented By <a href="contact.html">Olia Krasilnikov</a></p>
+        <p>Presented By Olia Krasilnikov</a></p>
         <p>&copy; Copyright 2022, All Right Reserved</p>
     </footer>
 
 
     <script src="js/utilitis.js"></script>
-    <script src="js/services.js"></script>
-    <script src="js/galleryController.js"></script>
+    <script src="js/exp-inp.js"></script>
     <script src="js/controler.js"></script>
+    <script src="js/galleryController.js"></script>
+    <script src="js/services.js"></script>
 
 
 </body>
