--- a/index.html
+++ b/index.html
@@ -69,8 +69,8 @@
                     <input type="file" class="file-input btn" name="image" onchange="onImgInput(event)" />
                 </button>
                 <div class="btn-gr1">
-                    <button value="UP" onclick="onMoveFocus(value)" class="fa fa-arrow-up"></button>
-                    <button value="DOWN" onclick="onMoveFocus(value)" class="fa fa-arrow-down"></button>
+                    <button value="UP" onclick="onMoveLineUp(4)" class="fa fa-arrow-up"></button>
+                    <button value="DOWN" onclick="onMoveFocus(-4)" class="fa fa-arrow-down"></button>
                     <button onclick="onSwitchLines()" class="fa fa-exchange"></button>
                     <button onclick="onAddLine()" class="fa fa-plus"></button>
                     <button onclick="onRemoveText()" class="fa fa-trash"></button>
