--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
                 <div class="btn-gr1">
                     <button value="UP" onclick="onMoveLineUp(4)" class="fa fa-arrow-up"></button>
                     <button value="DOWN" onclick="onMoveLineDown(-4)" class="fa fa-arrow-down"></button>
-                    <button onclick="onSwitchLines()" class="fa fa-exchange"></button>
+                    <button onclick="onSwitchFocus()" class="fa fa-exchange"></button>
                     <button onclick="onAddLine()" class="fa fa-plus"></button>
                     <button onclick="onRemoveText()" class="fa fa-trash"></button>
                 </div>
