saving to the local storage

--- a/index.html
+++ b/index.html
@@ -118,6 +118,7 @@
 
 
     <script src="js/utilitis.js"></script>
+    <script src="js/storage.js"></script>
     <script src="js/exp-inp.js"></script>
     <script src="js/controler.js"></script>
     <script src="js/galleryController.js"></script>
