--- a/memes.html
+++ b/memes.html
@@ -36,6 +36,7 @@
 
 
     <script src="js/utilitis.js"></script>
+    <script src="js/storage.js"></script>
     <script src="js/exp-inp.js"></script>
     <script src="js/services.js"></script>
     <script src="js/galleryController.js"></script>
