--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
     <section class="search-sec main-layout">
         <div class="search-box">
             <input class="input-bar" type="text" list="theme-search" placeholder="Search a category...."
-                onkeyup="onFilterMemes(value)">
+                onkeyup="onclickFilter(value)">
             <span class="fa fa-search"></span>
             <datalist id="theme-search">
                 <option value="funny">
