--- a/index.html
+++ b/index.html
@@ -94,8 +94,9 @@
                             oninput="onChangeTextColor(value)" title="Choose color"
                             data-trans="fill-color" /><span>🎨</span></button>
                 </div>
-                <div class="stikers-container">
-
+               <section class="stickers-container">
+                
+               </section>
                 </div>
                 <div class="save-btns">
                     <button onclick="shareToExternalSorce()" class="fc-btn share-container "><span
