--- a/index.html
+++ b/index.html
@@ -14,9 +14,9 @@
 <body onload="onInit()">
 
     <header class="navbar flex space-between">
-        <div class="logo">
-            <h1 class="heading">Memegenerator</h1>
-            <h5 class="sub-heading">Your Memes</h5>
+        <div class="logo"><img class="logo-img" src="meme-imgs (square)/LOGO.png">
+            <!-- <h1 class="heading">Memegenerator</h1> -->
+            <!-- <h5 class="sub-heading">Your Memes</h5> -->
         </div>
         <nav class="navbar topnav flex">
             <ul class="main-nav flex clean-list  space-between align-center">
