adding more keywords

--- a/index.html
+++ b/index.html
@@ -43,9 +43,9 @@
             <datalist id="theme-search">
                 <option data-trans="funny" value="funny">
                 <option data-trans="animal" value="animal">
-                <option data-trans="bad" value="bad">
-                <option data-trans="awkward" value="awkward">
-                <option data-trans="happy" value="happy">
+                <option data-trans="politics" value="politics">
+                <option data-trans="baby" value="baby">
+                <option data-trans="sarcasm" value="sarcasm">
             </datalist>
         </div>
         <div class="search-words">
@@ -166,7 +166,7 @@
     <div id="myModal" class="modal">
         <div class="modal-content">
             <span class="close fa fa-close"></span>
-            <p class="modal-txt">This frature is currently in the development and will be upploaded shortly.
+            <p class="modal-txt">This feature is currently in the development and will be upploaded shortly.
             </p>
         </div>
 
