improved the UI of the game

--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
 
     <section class="about-page hidden">
         <main class="about-container flex">
-            <img class="about-img" src="aboutImg/my-img (12).jpg" alt="">
+            <img class="about-img" src="aboutImg/my-img (13).jpeg" alt="">
             <div class="about-me">
                 <p data-trans="about-me" class="about-txt">Hello, my name is <span class="creator-name">Olia
                         Krasilnikov</span>.
